# relativity

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile.toml  NOTES.md  README.md  Trunk.toml  cliff.toml  index.html  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml  web.yml
.mr/: PRDS.md  config.toml  constitution.md
.mr/prds/: PRD-0001.md  PRD-0002.md  PRD-0003.md  PRD-0004.md  PRD-0005.md  PRD-0006-align-with-best-practices.md  PRD-0007-bevy-unit-and-e2e-tests.md  PRD-0008-ci-improvements.md  PRD-0009-improve-visuals.md  PRD-0010-improve-hud.md  PRD-0011-grid-update.md  PRD-0012-hotkeys.md  PRD-0013-beautify-hud.md  PRD-0014-beautify-launch.md
.mr/prompts/: adapt_language.md  bootstrap_generate_prds.md  bootstrap_plan.md  bootstrap_reconstruct.md  constitution_edit.md  devcontainer_generate.md  init.md  pick_prd.md  prd_edit.md  prd_edit_interactive.md  prd_new_discovery.md  prd_new_interactive.md  prd_new_synthesize_prd.md  refactor.md  reindex.md  reindex_depends_on.md  run_task.md  run_task_finalize.md  run_uat_verify.md  suggest_generate.md
.mr/templates/: prd.md
docs/: time_warp.md
src/: in_game.rs  lib.rs  main.rs  menu.rs  state.rs  types.rs
src/game/: mod.rs  test_helpers.rs
src/game/destination/: mod.rs
src/game/fade/: mod.rs
src/game/gravity_grid/: mod.rs
src/game/hud/: mod.rs
src/game/levels/: mod.rs
src/game/object/: mod.rs
src/game/observer/: mod.rs
src/game/outcome/: mod.rs
src/game/player/: mod.rs  player_clock.rs  player_sprite.rs  shared.rs
src/game/shared/: constants.rs  helpers.rs  mod.rs  systems.rs  types.rs
src/game/trail/: mod.rs
src/menu/: mod.rs
src/shared/: mod.rs  state.rs  types.rs
tests/: e2e_camera_shake.rs  e2e_collision.rs  e2e_despawn_level.rs  e2e_escape.rs  e2e_fade_overlay.rs  e2e_failure_overlay.rs  e2e_grid_toggle.rs  e2e_hud_anchoring.rs  e2e_hud_camera_sync.rs  e2e_hud_font_assignment.rs  e2e_hud_gamma_color.rs  e2e_hud_level_reset.rs  e2e_hud_observer_panel.rs  e2e_hud_panel_distinction.rs  e2e_hud_player_panel.rs  e2e_hud_responsive.rs  e2e_hud_sim_rate.rs  e2e_hud_structure.rs  e2e_hud_value_flash.rs  e2e_launch_aim_lock.rs  e2e_launch_arc_gradient.rs  e2e_launch_arc_ticks.rs  e2e_launch_cancel.rs  e2e_launch_preview.rs  e2e_launch_readout.rs  e2e_launch_state_machine.rs  e2e_launch_visuals.rs  e2e_level1_gameplay.rs  e2e_level_advance.rs  e2e_level_reset.rs  e2e_level_spawning.rs  e2e_menu_buttons.rs  e2e_no_power_bar.rs  e2e_screenshot.rs  e2e_sim_pause_toggle.rs  e2e_sim_rate_adjust_minus.rs  e2e_sim_rate_adjust_plus.rs  e2e_sim_rate_reset.rs  e2e_speed_controls_state_gate.rs  e2e_success_overlay.rs  (+5 more)
tests/common/: gameplay.rs  headless.rs  mod.rs  screenshot.rs
