[package]
name = "relativity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.17"
uom = "0.37"
nalgebra-spacetime = "0.5"
glam = "0.30"

# WASM support: webgl2 feature for browser compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.17", features = ["webgl2"] }
console_error_panic_hook = "0.1"
# getrandom is a transitive dependency that needs "js" feature for WASM
getrandom = { version = "0.2", features = ["js"] }