[package]
name = "relativity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.18"
bevy_lunex = "0.6"
bevy_trauma_shake = "0.7"
uom = "0.37"
nalgebra-spacetime = "0.5"
glam = "0.31"

[dev-dependencies]
approx = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
proptest = "1"

# WASM support: webgl2 feature for browser compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", features = ["webgl2"] }
bevy_lunex = { version = "0.6", features = ["wasm"] }
console_error_panic_hook = "0.1"
# getrandom is a transitive dependency that needs "js"/"wasm_js" feature for WASM
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }